--- a/sentencing-eda.Rmd
+++ b/sentencing-eda.Rmd
@@ -47,13 +47,13 @@ glimpse(us_sent)
 - explain what glimpse is
 - explain the different columns (linking to the background)
 
-### Who
+### Who {.tabset}
 
 A key motivation for this work is exploring how our personal and racial identities influence the judicial sentencing. In a fair, democratic system this identity or perceived identity should not affect how we are treated by the justice system.
 
 In this dataset, we have four variables that are related to identity: `age`, `sex`, `educ`: education, and `race`. It is important to note that these characteristics are not independent of one another but can intersect and interact with one another. This combined effect is known as intersectionality. The Center for Intersectional Justice describes the concept of intersectionality as: "the ways in which systems of inequality based on gender, race, ethnicity, sexual orientation, gender identity, disability, class and other forms of discrimination “intersect” to create unique dynamics and effects" (Ref: [Center for Intersectional Justice](https://www.intersectionaljustice.org/what-is-intersectionality), July 20, 2023).
 
-#### Sex {.tabset}
+#### Sex 
 
 Sex has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female".
 
@@ -66,7 +66,7 @@ We can recode this variable using `mutate` and `case_when`
 
 **To add**
 
-- Add how sex was defined (pre-sentencing report that comes out of the investigation done by the probation office). An interview with the defendant and documentation. See Background section.
+- Add how sex was defined (sex is defined in pre-sentencing report that comes out of the investigation done by the probation office. This goes to the attorneys and also comes out of an interview with the individual. It should be noted that there are only two categories, so it is likely that there might be only two options possible). See Background section or link to official report for more information.
 - Discuss how a binary variable will not reflect sentenced individuals gender identity and excludes several groups. It is also limiting in nature.
 - Discuss difference between sex and gender
 - Discuss who has defined this variable and why this is problematic
@@ -80,34 +80,57 @@ us_sent %>%
                          sex == 1 ~ "Female")) %>%
   ggplot() +
   geom_bar(aes(x = sex, fill = sex)) +
-  labs(x = "Sex *See background",
-       title = "Sex of Sentenced Individuals", 
+  labs(x = "Sex*",
+       title = "Sex* of Sentenced Individuals", 
        y = "Number of Individuals",
-       fill = "Sex")
+       fill = "Sex*")
 ```
 
-
-
-
-
-
-```{r}
-ggplot(us_sent) +
-  geom_bar(aes(x = sex))
-```
-
-
-
-By race
-
-
-By sex and race
+#### Race
 
 ```{r}
 us_sent %>%
-  count(sex, race)
+  distinct(race)
 ```
 
+
+```{r}
+us_sent %>%
+  mutate(race = case_when(race == "other" ~ "ari",
+                         TRUE ~ race)) %>%
+  ggplot() +
+  geom_bar(aes(x = fct_infreq(race), fill = race)) +
+  labs(x = "Race*",
+       title = "Race* of Sentenced Individuals", 
+       y = "Number of Individuals",
+       fill = "Race*")
+```
+
+#### Race and Sex
+
+
+```{r}
+us_sent %>%
+  mutate(race = case_when(race == "other" ~ "ari",
+                         TRUE ~ race)) %>%
+  mutate(sex = case_when(sex == 0 ~ "Male",
+                         sex == 1 ~ "Female")) %>%
+  ggplot() +
+  geom_bar(aes(x = fct_infreq(race), fill = sex)) +
+  labs(x = "Race*",
+       title = "Race* and Sex* of Sentenced Individuals", 
+       y = "Number of Individuals",
+       fill = "Sex*")
+```
+
+**To add**: 
+- what do we divide by?
+- You may look at this plot and say that whites are sentenced at the federal district court more than black individuals. This is where it is important to look at the population in each area. 
+
+
+#### Bringing in the census data
+
+- Limitations of census data.
 
 
 ### What
