Edits to master

--- a/master.Rmd
+++ b/master.Rmd
@@ -41,3 +41,7 @@ cases involving non-citizens, since the sentences in those cases frequently invo
 
 
 ```{r child = "sentencing-eda.Rmd"}
+```
+
+```{r child = "Exploration.Rmd"}
+```
