--- a/Exploration.Rmd
+++ b/Exploration.Rmd
@@ -1,7 +1,11 @@
-```{r}
+```{r echo=TRUE, message=FALSE, warning=FALSE}
 library(tidyverse)
 library(palmerpenguins)
 library(gridExtra)
+```
+
+
+```{r, include=FALSE}
 penguins = penguins %>% na.omit()
 knitr::opts_chunk$set(fig.width=4, fig.height=4) 
 ```
@@ -37,7 +41,7 @@ Each dot in the scatter plot we produce with the ggplot command represents a row
 %%%%%%%%% come back to this to explain R code %%%%%%%%%%%
 
 ```{r}
-ggplot(penguins, aes(x=body_mass_g, y=flipper_length_mm)) + geom_point()
+ggplot(penguins, aes(x=body_mass_g, y=flipper_length_mm)) + geom_point(color='coral2', alpha=0.7)
 ```
 
 What do you notice in this scatter plot? What do you wonder?
@@ -47,7 +51,7 @@ What do you notice in this scatter plot? What do you wonder?
 We just created a scatter plot with two numerical variables. Now we will see what happens if one variable is numerical and the other is categorical? Run the code below tht plots species (a categorical variable) against flipper length (a numerical variable).
 
 ```{r}
-ggplot(penguins, aes(x=species, y=flipper_length_mm)) + geom_point()
+ggplot(penguins, aes(x=species, y=flipper_length_mm)) + geom_point(color='coral2', alpha=0.7)
 ```
 
 What do you notice in this scatter plot? What do you wonder?
@@ -55,7 +59,7 @@ What do you notice in this scatter plot? What do you wonder?
 Let's try one more scenario. What happens when you try to plot two categorical variables against each other? Run the code below to plot sex against species (both categorical variables).
 
 ```{r}
-ggplot(penguins, aes(x=species, y=sex)) + geom_point()
+ggplot(penguins, aes(x=species, y=sex)) + geom_point(color='coral2', alpha=0.7)
 ```
 
 What do you notice in this scatter plot? What do you wonder?
@@ -78,8 +82,8 @@ We can make a fairly boring plot of these two points.
 
 ```{r}
 twoplot <- ggplot(twopoints, aes(x=xvals, y=yvals)) + 
-  geom_point(color='red') + 
-  geom_text(aes(label=label), nudge_x = -.2, nudge_y = .2 ) +
+  geom_point(color='coral2') + 
+  geom_text(aes(label=label), nudge_y = .3 ) +
   xlim(0,6) + 
   ylim(0,6)
 twoplot
@@ -116,22 +120,21 @@ twolinear <- lm(formula = yvals ~ xvals, data=twopoints)
 twolinear
 ```
 
-```{r}
-twopoints$group = as.factor(1)
-threepoints = rbind(twopoints, data.frame(xvals = 2, yvals = 3, label='C')
+```{r, fig.width=12}
+threepoints = rbind(twopoints, data.frame(xvals = 2, yvals = 3, label='C'))
 threepoints$yfit1 = threepoints$xvals*3/2+1/2
 threepoints$yfit2 = threepoints$xvals+1
 threepoints$yfit3 = threepoints$xvals*2-1
 
 threeplot = ggplot(threepoints, aes(x=xvals, y = yvals)) + 
-  geom_point()  + 
-  geom_text(aes(label=label), nudge_x = -.2, nudge_y = .2 ) +
+  geom_point(color = 'coral2')  + 
+  geom_text(aes(label=label), nudge_y = 0.3, check_overlap = TRUE) +
   xlim(0,6) + ylim(0,6)
 
 grid.arrange(
-  threeplot + geom_abline(slope=3/2, intercept = 1/2)+  geom_segment(aes(xend = xvals, yend = yfit1)),
-  threeplot + geom_abline(slope=1, intercept = 1) + geom_segment(aes(xend = xvals, yend = yfit2)),
-  threeplot + geom_abline(slope=2, intercept = -1) +  geom_segment(aes(xend = xvals, yend = yfit3)),
+  threeplot + geom_abline(slope=3/2, intercept = 1/2) + geom_segment(aes(xend = xvals, yend = yfit1), color='coral2'),
+  threeplot + geom_abline(slope=1, intercept = 1) + geom_segment(aes(xend = xvals, yend = yfit2), color='coral2'),
+  threeplot + geom_abline(slope=2, intercept = -1) +  geom_segment(aes(xend = xvals, yend = yfit3), color='coral2'),
 ncol=3
 )
 ```
@@ -145,22 +148,24 @@ threelinear
 
 ```{r}
 threepoints$linfit = 1.5*threepoints$xvals + 0.3333
-ggplot(threepoints, aes(x=xvals, y = yvals, color=group)) + 
-  geom_point()  + 
+ggplot(threepoints, aes(x=xvals, y = yvals)) + 
+  geom_point(color='coral2')  + 
+  geom_text(aes(label=label), nudge_y = -0.4 ) +
   xlim(0,6) + ylim(0,6)+ 
   geom_abline(slope=1.5, intercept=0.3333) + 
-  geom_segment(aes(xend = xvals, yend = linfit))
+  geom_segment(aes(xend = xvals, yend = linfit), color='coral2')
 ```
 
 ## Fitting a Line to Many Points: Linear Regression!
 
 ```{r}
-pengscat = ggplot(peng, aes(x=body_mass_g, y=flipper_length_mm)) + geom_point()
+pengscat = ggplot(penguins, aes(x=body_mass_g, y=flipper_length_mm)) + 
+  geom_point(color='coral2', alpha=0.7)
 pengscat
 ```
 
 ```{r}
-pengfit = lm(formula = flipper_length_mm ~ body_mass_g, data = peng)
+pengfit = lm(formula = flipper_length_mm ~ body_mass_g, data = penguins)
 pengfit
 ```
 
@@ -171,13 +176,14 @@ pengscat + geom_abline(slope= 0.0152, intercept = 137.0396)
 ## Categorical Data to Numerical Representations
 
 ```{r}
-peng$isAdelie = ifelse(peng$species=='Adelie', 1, 0)
-adelieplot = ggplot(peng, aes(x=isAdelie, y=flipper_length_mm)) + geom_point()
+penguins$isAdelie = ifelse(penguins$species=='Adelie', 1, 0)
+adelieplot = ggplot(penguins, aes(x=isAdelie, y=flipper_length_mm)) + 
+  geom_point(color='coral2', alpha=0.7)
 adelieplot
 ```
 
 ```{r}
-amodel = lm(formula = flipper_length_mm~isAdelie, data=peng)
+amodel = lm(formula = flipper_length_mm~isAdelie, data=penguins)
 amodel
 ```
 
@@ -186,26 +192,32 @@ adelieplot + geom_abline(slope=-19.35, intercept=209.45)
 ```
 
 ```{r, fig.width=12}
-peng$isChinstrap = ifelse(peng$species=='Chinstrap',1,0)
-peng$isGentoo = ifelse(peng$species=='Gentoo',1,0)
+penguins$isChinstrap = ifelse(penguins$species=='Chinstrap',1,0)
+penguins$isGentoo = ifelse(penguins$species=='Gentoo',1,0)
 
-cmodel = lm(formula = flipper_length_mm~isChinstrap, data=peng)
-gmodel = lm(formula = flipper_length_mm~isGentoo, data=peng)
+cmodel = lm(formula = flipper_length_mm~isChinstrap, data=penguins)
+gmodel = lm(formula = flipper_length_mm~isGentoo, data=penguins)
 
-speciesbase = ggplot(peng, aes(y=flipper_length_mm)) 
-aplot= speciesbase + geom_point(aes(x=isAdelie)) + geom_abline(slope=amodel$coefficients[2], intercept=amodel$coefficients[1])
-cplot = speciesbase + geom_point(aes(x=isChinstrap)) + geom_abline(slope=cmodel$coefficients[2], intercept=cmodel$coefficients[1])
-gplot = speciesbase + geom_point(aes(x=isGentoo)) + geom_abline(slope=gmodel$coefficients[2], intercept=gmodel$coefficients[1])
+speciesbase = ggplot(penguins, aes(y=flipper_length_mm)) 
+aplot = speciesbase + 
+  geom_point(aes(x=isAdelie), color='coral2', alpha=0.7) + 
+  geom_abline(slope=amodel$coefficients[2], intercept=amodel$coefficients[1])
+cplot = speciesbase + 
+  geom_point(aes(x=isChinstrap), color='coral2', alpha=0.7) + 
+  geom_abline(slope=cmodel$coefficients[2], intercept=cmodel$coefficients[1])
+gplot = speciesbase + 
+  geom_point(aes(x=isGentoo), color='coral2', alpha=0.7) + 
+  geom_abline(slope=gmodel$coefficients[2], intercept=gmodel$coefficients[1])
 
-grid.arrange( aplot, cplot, gplot, ncol=3)
+grid.arrange(aplot, cplot, gplot, ncol=3)
 ```
 
 ```{r}
-linmodel <- lm(flipper_length_mm ~ species, data = peng)
+linmodel <- lm(flipper_length_mm ~ species, data = penguins)
 linmodel
 ```
 
 ```{r}
-peng_encoded = peng %>% mutate(value = 1) %>% spread(species, value, fill = 0 )
+peng_encoded = penguins %>% mutate(value = 1) %>% spread(species, value, fill = 0 )
 head(peng_encoded)
 ```
